GlassPane: link buttons are not covered correctly and glasspanes too big
- If the button is covered by a glass pane, it must not be clickable. A
glasspane-parent uses pointer-events: none, but the link button already
uses pointer-events: auto, hence it is clickable
- Also, since a glass pane should always be as big as its target, the
target needs to have position set to absolute or relative. Otherwise the
glass pane might be too big -> Automatically set position to relative on
the target if position is not relative or absolute

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/button/Button.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/button/Button.less
@@ -59,6 +59,12 @@
     & > .icon {
       /* Reset IE hack for link buttons because it breaks ellipsis tooltip */
       pointer-events: auto;
+
+      /* Make sure button is not clickable if it is covered by a glass pane */
+      .glasspane-parent&,
+      .glasspane-parent & {
+        pointer-events: none;
+      }
     }
 
     &:hover {
